--- a/lab4/lab4.vcxproj.filters
+++ b/lab4/lab4.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="MyForm.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Thread.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Thread.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
